fix: fixed problem with the use of the variable key and remove files '.gitignore' and 'apiKey.js'.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <div id='coins' class='mr-5'></div>
   </div>
 
-  <script src="./script.js" type="module"></script>
-  <script src="./apiKey.js" type="module"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
